--- a/bib.tex
+++ b/bib.tex
@@ -2,7 +2,7 @@
 %\item I.~Kwak, D.~Kriegman, and K.~Branson, ``Structured rnns for action start
 %  detection,'' {\em arXiv preprint arXiv:????.????}, 2019.
 
-\item J.~Z. Guo, B. Sauerbrei, J. Cohen, M. Mischiatti, A. Graves, K. Branson, and A. Hantman. ``Disrupting cortico-cerebellar communication impairs dexterity'', {\em accepted,  eLife}.
+\item J.~Z. Guo, B. Sauerbrei, J. Cohen, M. Mischiatti, A. Graves, K. Branson, and A. Hantman. ``Disrupting cortico-cerebellar communication impairs dexterity'', {\em eLife} 2021;10:e65906, 2021.
   
 \item C.~E. Schretter, Y. Aso, M. Dreher, A.~A. Robie, M.-J. Dolan, N. Chen, M. Ito, T. Yang, R. Parekh, K. Branson, and G.~M. Rubin, ``Neuronal circuitry underlying female aggression in {\em {{D}}rosophila}, {\em eLife}, eLife 2020;9:e58942, 2020.
   
