--- a/resume.tex
+++ b/resume.tex
@@ -138,16 +138,6 @@ My goal is to develop new and impactful ways to use machine vision and learning 
 }
 \end{cventries}
 
-\cvsection{Honors and Awards}
-\vspace{\acvSectionContentTopSkip}
-\vspace{2mm}
-\begin{cvitems}
-\item Selected as one of Cell’s ``40 under 40'' scientists in commemoration of their 40th anniversary, 2015.
-\item Faculty of 1000 Recommendation for JAABA, 2013.
-\item NASA Graduate Student Researcher Program Fellowship, 2003-2006.
-\end{cvitems}\\
-\vspace{\acvSectionContentTopSkip}
-
 \cvsection{Selected Publications}
 \vspace{\acvSectionContentTopSkip}
 \vspace{2mm}
@@ -177,6 +167,7 @@ I lead, co-developed, and co-maintain the following open-source pieces of softwa
 \vspace{\acvSectionContentTopSkip}
 \vspace{2mm}
 \begin{cvitems}
+\item 4D Cellular Physiology Reimagined: Theory as a Principal Component, September, 2021. 
 \item Janelia Conference: Women in Computational Biology, November 2019.
 \item Bioimage Computing Workshop, CVPR, June 2019.
 \item Society for Neuroscience Virtual Conference on Machine Learning, June 2019.
@@ -185,12 +176,22 @@ I lead, co-developed, and co-maintain the following open-source pieces of softwa
 \end{cvitems}
 \vspace{\acvSectionContentTopSkip}
 
+\cvsection{Honors and Awards}
+\vspace{\acvSectionContentTopSkip}
+\vspace{2mm}
+\begin{cvitems}
+\item Selected as one of Cell’s ``40 under 40'' scientists in commemoration of their 40th anniversary, 2015.
+\item Faculty of 1000 Recommendation for JAABA, 2013.
+\item NASA Graduate Student Researcher Program Fellowship, 2003-2006.
+\end{cvitems}\\
+\vspace{\acvSectionContentTopSkip}
+
 \cvsection{Scientific Leadership}
 \vspace{\acvSectionContentTopSkip}
 \vspace{2mm}
 \begin{cvitems}
 \item As part of Senior Leadership at Janelia, participate in institute-wide planning and decision-making, 2017-present.
-\item As Head of the Computation and Theory Research Area, manage recruiting, hiring, and renewal of Group Leaders, and manage budgets for 9 labs, 2017-present.
+\item As Head of the Computation and Theory Research Area, set the overall vision and direction for computation at Janelia; manage recruiting, hiring, and renewal of Group Leaders, and manage and set budgets for 10 labs, 2017-present. Help manage the compute cluster group, and initiated building a GPU cluster at Janelia. 
 \item Co-created the Janelia Diversity, Equity, and Inclusion Committee, 2018. Chaired committee 2018-2020. Participate 2020-present. As part of this committee, we have researched and proposed initiatives to Janelia leadership, invited speakers to present at Janelia, and started a DEI reading group.
 \item Started, co-organize, and contribute to Computer Vision and Machine Learning weekly reading group and internal seminar series at Janelia, 2014-present.
 \item Worked with Scientific Computing Systems Group at Janelia to design and create a GPU cluster for Janelia researchers, 2018-present.
@@ -228,18 +229,18 @@ I lead, co-developed, and co-maintain the following open-source pieces of softwa
   Mayank Kabra & 2011-2013 & & Machine learning consultant, Kabra Consulting \\
   Marta Rivera-Alba & 2013-2016& & Lead Data Scientist, Clarity AI\\
   Nakul Verma & 2013-2017 & & Teaching Faculty, Computer Science, Columbia University\\
-  Kelly Seagraves & 2015-2016 & & C.V. Starr Fellow, Princeton University\\
+  Kelly Seagraves & 2015-2016 & & AAAS Science \& Technology Policy Fellow\\
   Roian Egnor & 2015-present & & Senior Scientist in my lab\\
   Iljung (Sam) Kwak & 2015-present & PhD, Computer Science, UCSD, 2019 & Machine Learning Researcher in my lab\\
   Jiwoong (Daniel) Im & 2016-2020 & & PhD student, Computer Science, NYU\\
-  Rutuja Patil & 2017-present & & Software Engineer in my la.\\
+  Rutuja Patil & 2017-present & & Software Engineer in my lab\\
   Ivan (Felip\'e) Rodriguez & 2017-2018 & M.S., Computer Science, University of Puerto Rico, 2019 & PhD student, Cognitive Science, Brown University \\\hline
 \end{tabular}
 \end{center}
 \endgroup
 \\
 \vspace{.25cm}
-With members of my lab, I've also co-mentored two undergraduate students and three high school students. 2/3 of my mentees have been from groups historically marginalized in STEM. As Head of Computation and Theory, I also provide mentorship and advice to the other 8 Group Leaders within this Research Area. 
+With members of my lab, I've also co-mentored two undergraduate students and three high school students. 2/3 of my mentees have been from groups historically marginalized in STEM. As Head of Computation and Theory, I also provide mentorship and advice to the other 9 Group Leaders within this Research Area. 
 \vspace{\acvSectionContentTopSkip}
 
 \cvsection{Invited Talks}
@@ -247,6 +248,8 @@ With members of my lab, I've also co-mentored two undergraduate students and thr
 \vspace{2mm}
 
 \begin{cvitems}
+\item Learning Meaningful Representations of Life (LMRL) Workshop, NeurIPS, December, 2021.
+\item CU Boulder BioFrontiers Seminar, October, 2021.  
 \item CVPR Computer Vision for Animals Workshop, June, 2021. 
 \item CVPR Multi-Agent Behavior Workshop, June, 2021.
 \item World Wide Neuro/Tubingen Neuroscience Seminar Series, May, 2021.
